Fix crash when tokenizing search string

https://bugzilla.gnome.org/show_bug.cgi?id=755327